# MyData-Invoice-Downloader

./: .gitignore  LICENSE  README.md  entry.py  pyproject.toml
installer/: build.ps1  make_icon.py  timologio.iss  timologio.spec
src/timologio/: __init__.py  backup.py  cli.py  config.py  coverage.py  crypto.py  db.py  demo.py  locking.py  logs.py  models.py  normalize.py  presence.py  repo.py  reports.py  sharing.py  sync.py  updates.py  vies.py
src/timologio/download/: __init__.py  headless.py  hostpool.py  provider.py  storage.py
src/timologio/excel/: __init__.py  aliases.py  detect.py  format_a.py  format_b.py  reader.py
src/timologio/gui/: __init__.py  __main__.py  analysis_panel.py  app.py  busy.py  client_dialog.py  control_panel.py  documents_view.py  excel_help.py  i18n.py  icons.py  import_dialog.py  main_window.py  manual.py  online_only.py  printing.py  share_dialog.py  side_menu.py  sync_page.py  theme.py  tour.py  tray.py  unlock.py  updater.py  widgets.py  workers.py
src/timologio/mydata/: __init__.py  client.py  e3.py  errors.py  parse.py
tests/: test_admin.py  test_columns.py  test_core.py  test_coverage.py  test_excel_import.py  test_export.py  test_features.py  test_gui_assets.py  test_installer_script.py  test_logs.py  test_master_password.py  test_network.py  test_online_only_filing.py  test_presence.py  test_printing.py  test_reports.py  test_sharing.py  test_single_instance.py  test_theme.py  test_viewer_and_import.py
